[package]
name = "plugin" # 名称固定为plugin，请勿更改
version = "1.0.0"
authors = ["pot-app"]
edition = "2021"

[lib]
crate-type = ["dylib"] # pot只支持dylib类型动态库，请勿修改

[dependencies]
sqlx = { version = "0.7.2", features = ["sqlite","runtime-tokio"] }
tokio = { version = "1.33.0", features = ["rt","rt-multi-thread"] }
serde_json = "1.0"
futures = "0.3.28"
dirs = "5.0.1"
